force-app/main/default/objects/Reservation__c/fields/Grand_Parent_Reservation__c.field-meta.xml
<CustomField>
    <fullName>Grand_Parent_Reservation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>original reservation to which all the child reservations have been originated and linked</description>
    <label>Grand Parent Reservation</label>
    <referenceTo>Reservation__c</referenceTo>
    <relationshipLabel>Grand Parent Reservation</relationshipLabel>
    <relationshipName>Reservations2</relationshipName>
    <type>Lookup</type>
</CustomField>