force-app/main/default/objects/Reservation__c/fields/Parent_Reservation__c.field-meta.xml
<CustomField>
    <fullName>Parent_Reservation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Immediate parent of the current reservation</description>
    <label>Parent Reservation</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Reservation__c.Id</field>
            <operation>notEqual</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Reservation__c</referenceTo>
    <relationshipLabel>Parent Reservation</relationshipLabel>
    <relationshipName>Reservations1</relationshipName>
    <type>Lookup</type>
</CustomField>