force-app/main/default/objects/Reservation__c/fields/Reservation_Type__c.field-meta.xml
<CustomField>
    <fullName>Reservation_Type__c</fullName>
    <description>This field is used to store the type of reservation.</description>
    <label>Reservation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New_Reservation</fullName>
                <label>New Reservation</label>
            </value>
            <value>
                <fullName>Updated_Reservation</fullName>
                <label>Updated Reservation</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>