force-app/main/default/objects/Reservation__c/fields/Total_net_price__c.field-meta.xml
<CustomField>
    <fullName>Total_net_price__c</fullName>
    <description>Total net price selected based on number of days and applied discount for Selected location will be saved here.</description>
    <label>Total net price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>