force-app/main/default/objects/Reservation__c/fields/Total_price__c.field-meta.xml
<CustomField>
    <fullName>Total_price__c</fullName>
    <description>Total price selected based on number of days for Selected location will be saved here.</description>
    <label>Total price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>